compiler-core/src/go/tests/snapshots/gleam_core__go__tests__generics__tuple_generics.snap
---
source: compiler-core/src/go/tests/generics.rs
expression: "pub fn make_tuple(x: t) -> #(Int, t, Int) {\n  #(0, x, 1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn make_tuple(x: t) -> #(Int, t, Int) {
  #(0, x, 1)
}


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
)

const _ = gleam_P.Use_Import
const Use_Import byte = 0

func MakeTuple[I gleam_P.Type[I]](x I) gleam_P.Tuple3_t[
  gleam_P.Int_t,
  I,
  gleam_P.Int_t,
] {
  return gleam_P.Tuple3_t[gleam_P.Int_t, I, gleam_P.Int_t]{0, x, 1}
}
